# ffmpeg4kj

./: .gitignore  README.md  build.gradle  build.gradle.kts  publishing.gradle  settings.gradle  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
kotlin/: build.gradle.kts  pom.gradle.kts
kotlin/src/main/kotlin/ffmpeg4kj/: FFMpeg4KJ.kt
kotlin/src/main/kotlin/ffmpeg4kj/av/: Buffer.kt  BufferPool.kt  ChromaLocation.kt  Codec.kt  CodecContext.kt  CodecID.kt  CodecParameters.kt  ColorPrimaries.kt  ColorRange.kt  ColorSpace.kt  ColorTransferCharacteristic.kt  Constants.kt  Decoder.kt  Demuxer.kt  Discard.kt  Encoder.kt  ErrorConstants.kt  FieldOrder.kt  FormatContext.kt  Frame.kt  IOContext.kt  ImageConverter.kt  Mathematics.kt  MediaType.kt  Muxer.kt  Packet.kt  Parser.kt  PictureStructure.kt  PixelFormat.kt  Rational.kt  Rounding.kt  SampleFormat.kt  Stream.kt  Time.kt
kotlin/src/main/kotlin/ffmpeg4kj/util/: AbstractNativeObject.kt  ByteBufferUtil.kt  JNI.kt  NativeEnum.kt
native/: CMakeLists.txt
native/docker/: Dockerfile-android-arm  Dockerfile-android-arm64  Dockerfile-linux-arm64  Dockerfile-linux-armv6  Dockerfile-linux-armv7  Dockerfile-linux-x86  Dockerfile-linux-x86_64  Dockerfile-windows-x86_64
native/scripts/: build.sh  cross-build.sh
native/src/: CMakeLists.txt  FFMpeg4KJ_jni.cpp
native/src/av/: BufferNativeObject.cpp  BufferNativeObject.h  BufferNativeObject_jni.cpp  BufferPoolNativeObject.cpp  BufferPoolNativeObject.h  BufferPoolNativeObject_jni.cpp  CMakeLists.txt  CodecContextNativeObject.cpp  CodecContextNativeObject.h  CodecContextNativeObject_jni.cpp  CodecNativeObject.cpp  CodecNativeObject.h  CodecNativeObject_jni.cpp  CodecParametersNativeObject.cpp  CodecParametersNativeObject.h  CodecParametersNativeObject_jni.cpp  DecoderNativeObject.cpp  DecoderNativeObject.h  DecoderNativeObject_jni.cpp  DemuxerNativeObject.cpp  DemuxerNativeObject.h  DemuxerNativeObject_jni.cpp  EncoderNativeObject.cpp  EncoderNativeObject.h  EncoderNativeObject_jni.cpp  FormatContextNativeObject.cpp  FormatContextNativeObject.h  FormatContextNativeObject_jni.cpp  FrameNativeObject.cpp  FrameNativeObject.h  FrameNativeObject_jni.cpp  IOContextNativeObject.cpp  IOContextNativeObject.h  IOContextNativeObject_jni.cpp  ImageConverterNativeObject.cpp  ImageConverterNativeObject.h  ImageConverterNativeObject_jni.cpp  Mathematics_jni.cpp  MillisecondsNativeObject_jni.cpp  MuxerNativeObject.cpp  (+16 more)
native/src/util/: AbstractNativeObject.cpp  AbstractNativeObject.h  AbstractNativeObject_jni.cpp  CMakeLists.txt  JniUtil.cpp  JniUtil.h  LogUtil.cpp  LogUtil.h
tools/: gjavah.sh
